详细信息接入

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                                         <div class="container">
                                             <div class="leftbox">
                                                 <div class="upbox" style="text-align:center">
-                                                    <h1 style="height:70%" id="2"></h1><h3 id="1">1</h3>
+                                                    <h2 style="height:50%" id="2"></h2><h3 id="1">1</h3>
                                                 </div >
                                                 <div  class="downbox">
                                                     <p>基金涨幅： <em id="3"></em></p>
@@ -172,66 +172,77 @@
                                                 <div class="topbox" id="topBox"></div>
                                                 <div class="bottombox">
                                                     <div class="bottomleft">
-
-                                                    </div>
-                                                    <div class="bottomright">
+                                                        <p>股票率：<em id="sto1"></em></p>
+                                                        <p>债券率：<em id="bon1"></em></p>
+                                                        <p>现金率：<em id="cas1"></em></p>
                                                         <h3><a href="" onclick="fun_a()" id="link1">更多信息</a></h3>
                                                     </div>
+                                                    <div class="bottomright">
+                                                        <p style="font-size:20px">STYLE</p>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
-                                    </li>
-                                    <li class="mt-tabpage-item"style="color: #4984a6;margin: 0;padding: 0">
-                                        <div class="container">
-                                        <div class="leftbox">
-                                            <div class="upbox">
-                                                <h1 id="7">name</h1><h3 id="6">3</h3>
-                                            </div >
-                                            <div  class="downbox">
-                                                <p>基金涨幅：</p>
-                                                <p id="8">row 2, cell 2</p>
-                                                <p>基金类型：</p>
-                                                <p id="9">row 2, cell 2</p>
-                                                <p>基金风险：</p>
-                                                <p id="10">row 2, cell 2</p>
-                                            </div>
-                                        </div>
-                                        <div class="rightbox">
-                                            <div class="topbox" id="topBox2"></div>
-                                            <div class="bottombox">
-                                                <div class="bottomleft">
-
-                                                </div>
-                                                <div class="bottomright">
-                                                    <h3><a href="" onclick="fun_b()" id="link2">更多信息</a></h3>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
                                     </li>
                                     <li class="mt-tabpage-item"style="color: #4984a6;margin: 0;padding: 0">
                                         <div class="container">
                                             <div class="leftbox">
-                                                <div class="upbox">
-                                                    <h1 id="12">name</h1><h3 id="11">5</h3>
+                                                <div class="upbox" style="text-align:center">
+                                                    <h2 style="height:50%" id="7"></h2><h3 id="6">3</h3>
                                                 </div >
                                                 <div  class="downbox">
-                                                    <p>基金涨幅：</p>
-                                                    <p id="13">row 2, cell 2</p>
-                                                    <p>基金类型：</p>
-                                                    <p id="14">row 2, cell 2</p>
-                                                    <p>基金风险：</p>
-                                                    <p id="15">row 2, cell 2</p>
+                                                    <p>基金涨幅： <em id="8"></em></p>
+                                                    <p>基金类型：<em id="9"></em></p>
+                                                    <p>基金风险：<em id="10"></em></p>
+                                                    <p>基金规模：<em id="sca2"></em>(亿元)</p>
+                                                    <p>基金建立时间：<em id="est2"></em></p>
+                                                    <p>基金公司：<em id="com2"></em></p>
+                                                    <p>基金经理：<em id="man2"></em></p>
+                                                </div>
+                                            </div>
+                                            <div class="rightbox">
+                                                <div class="topbox" id="topBox2"></div>
+                                                <div class="bottombox">
+                                                    <div class="bottomleft">
+                                                        <p>股票率：<em id="sto2"></em></p>
+                                                        <p>债券率：<em id="bon2"></em></p>
+                                                        <p>现金率：<em id="cas2"></em></p>
+                                                        <h3><a href="" onclick="fun_b()" id="link2">更多信息</a></h3>
+                                                    </div>
+                                                    <div class="bottomright">
+                                                        <p style="font-size:20px">STYLE</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="mt-tabpage-item"style="color: #4984a6;margin: 0;padding: 0">
+                                        <div class="container">
+                                            <div class="leftbox">
+                                                <div class="upbox" style="text-align:center">
+                                                    <h2 style="height:50%" id="12"></h2><h3 id="11">5</h3>
+                                                </div >
+                                                <div  class="downbox">
+                                                    <p>基金涨幅： <em id="13"></em></p>
+                                                    <p>基金类型：<em id="14"></em></p>
+                                                    <p>基金风险：<em id="15"></em></p>
+                                                    <p>基金规模：<em id="sca3"></em>(亿元)</p>
+                                                    <p>基金建立时间：<em id="est3"></em></p>
+                                                    <p>基金公司：<em id="com3"></em></p>
+                                                    <p>基金经理：<em id="man3"></em></p>
                                                 </div>
                                             </div>
                                             <div class="rightbox">
                                                 <div class="topbox" id="topBox3"></div>
                                                 <div class="bottombox">
                                                     <div class="bottomleft">
-
+                                                        <p>股票率：<em id="sto3"></em></p>
+                                                        <p>债券率：<em id="bon3"></em></p>
+                                                        <p>现金率：<em id="cas3"></em></p>
+                                                        <h3><a href="" onclick="fun_c()" id="link3">更多信息</a></h3>
                                                     </div>
                                                     <div class="bottomright">
-                                                        <h3><a href="" onclick="fun_c()" id="link3">更多信息</a></h3>
+                                                        <p style="font-size:20px">STYLE</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -780,7 +791,9 @@
         loadXMLDoc1();
         loadXMLDetail1();
         loadXMLDoc2();
+        loadXMLDetail2();
         loadXMLDoc3();
+        loadXMLDetail3();
 
     }
     function sleep (time) {
@@ -892,6 +905,9 @@
                 document.getElementById("est1").innerHTML = obj[0].fundEstablishTime;
                 document.getElementById("com1").innerHTML = obj[0].funCompany;
                 document.getElementById("man1").innerHTML = obj[0].fundManager;
+                document.getElementById("sto1").innerHTML = obj[0].stockRatio;
+                document.getElementById("bon1").innerHTML = obj[0].bondRatio;
+                document.getElementById("cas1").innerHTML = obj[0].cashRatio;
             }
         };
         xmlhttp.open("GET","http://47.100.120.235:8081/detailInfo?fundId="+document.getElementById(1).innerText,true);
@@ -933,6 +949,41 @@
         xmlhttp.send();
     }
 </script>
+<script>
+    function loadXMLDetail2()
+    {
+        //setTimeout(function(){ alert("Hello"); }, 1000);
+        var xmlhttp;
+        if (window.XMLHttpRequest)
+        {
+            //  IE7+, Firefox, Chrome, Opera, Safari 浏览器执行代码
+            xmlhttp=new XMLHttpRequest();
+        }
+        else
+        {
+            // IE6, IE5 浏览器执行代码
+            xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
+        }
+        xmlhttp.onreadystatechange=function()
+        {
+            if (xmlhttp.readyState==4 && xmlhttp.status==200)
+            {
+                var str = xmlhttp.responseText;
+                var obj = JSON.parse(str);//JSON字符串转JSON对象
+                document.getElementById("sca2").innerHTML = obj[0].fundScale;
+                document.getElementById("est2").innerHTML = obj[0].fundEstablishTime;
+                document.getElementById("com2").innerHTML = obj[0].funCompany;
+                document.getElementById("man2").innerHTML = obj[0].fundManager;
+                document.getElementById("sto2").innerHTML = obj[0].stockRatio;
+                document.getElementById("bon2").innerHTML = obj[0].bondRatio;
+                document.getElementById("cas2").innerHTML = obj[0].cashRatio;
+            }
+        };
+        xmlhttp.open("GET","http://47.100.120.235:8081/detailInfo?fundId="+document.getElementById(6).innerText,true);
+        //xmlhttp.setRequestHeader("Access-Control-Allow-Origin","*");
+        xmlhttp.send();
+    }
+</script>
 
 <script>
     function loadXMLDoc3()
@@ -964,6 +1015,42 @@
             }
         };
         xmlhttp.open("GET","http://47.100.120.235:8081/mainInfo?fundId="+document.getElementById(11).innerText,true);
+        //xmlhttp.setRequestHeader("Access-Control-Allow-Origin","*");
+        xmlhttp.send();
+    }
+</script>
+
+<script>
+    function loadXMLDetail3()
+    {
+        //setTimeout(function(){ alert("Hello"); }, 1000);
+        var xmlhttp;
+        if (window.XMLHttpRequest)
+        {
+            //  IE7+, Firefox, Chrome, Opera, Safari 浏览器执行代码
+            xmlhttp=new XMLHttpRequest();
+        }
+        else
+        {
+            // IE6, IE5 浏览器执行代码
+            xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
+        }
+        xmlhttp.onreadystatechange=function()
+        {
+            if (xmlhttp.readyState==4 && xmlhttp.status==200)
+            {
+                var str = xmlhttp.responseText;
+                var obj = JSON.parse(str);//JSON字符串转JSON对象
+                document.getElementById("sca3").innerHTML = obj[0].fundScale;
+                document.getElementById("est3").innerHTML = obj[0].fundEstablishTime;
+                document.getElementById("com3").innerHTML = obj[0].funCompany;
+                document.getElementById("man3").innerHTML = obj[0].fundManager;
+                document.getElementById("sto3").innerHTML = obj[0].stockRatio;
+                document.getElementById("bon3").innerHTML = obj[0].bondRatio;
+                document.getElementById("cas3").innerHTML = obj[0].cashRatio;
+            }
+        };
+        xmlhttp.open("GET","http://47.100.120.235:8081/detailInfo?fundId="+document.getElementById(11).innerText,true);
         //xmlhttp.setRequestHeader("Access-Control-Allow-Origin","*");
         xmlhttp.send();
     }
