--- a/login.html
+++ b/login.html
@@ -39,8 +39,9 @@
                 <button   type="button" class="btn btn-default" data-dismiss="modal">
                     关闭
                 </button>
-                <a href="index.html">
-                <button type="button" class="btn btn-primary" >
+               <a href="https://sandbox.apihub.citi.com/gcb/api/authCode/oauth2/authorize?response_type=code&client_id=5bc9344e-8478-4a5f-a16d-b473328b114d&scope=pay_with_points accounts_details_transactions customers_profiles payees personal_domestic_transfers internal_domestic_transfers external_domestic_transfers bill_payments cards onboarding reference_data meta_data insurance_purchase&countryCode=HK&businessCode=GCB&locale=en_US&state=c18d6005-8ae0-4ca0-3e27-35f780bd0d21&redirect_uri=http://47.100.120.235:8081/feedback"
+                 >
+                <button id="jump" type="button" class="btn btn-primary"   >
                     确定跳转
                 </button>
                 </a>
@@ -57,5 +58,29 @@
     });
 </script>
 
+<script type="text/javascript">
+// function jump() {
+//     var xmlhttp;
+//     if (window.XMLHttpRequest)
+//     {
+//         //  IE7+, Firefox, Chrome, Opera, Safari 浏览器执行代码
+//         xmlhttp=new XMLHttpRequest();
+//     }
+//     else
+//     {
+//         // IE6, IE5 浏览器执行代码
+//         xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
+//     }
+//     xmlhttp.open("GET","https://sandbox.apihub.citi.com/gcb/api/authCode/oauth2/authorize?response_type=code&client_id=3906dd6d-534b-4d20-81d7-0e78848013a3&scope=pay_with_points accounts_details_transactions customers_profiles payees personal_domestic_transfers internal_domestic_transfers external_domestic_transfers bill_payments cards onboarding reference_data meta_data insurance_purchase&countryCode=HK&businessCode=GCB&locale=en_US&state=c18d6005-8ae0-4ca0-3e27-35f780bd0d21" +
+//         "&redirect_uri=https://47.100.120.235:8081/feedback"
+//         ,true);
+//     //xmlhttp.setRequestHeader("Access-Control-Allow-Origin","*");
+//     xmlhttp.send();
+// }
+
+</script>
+
 </body>
 </html>
+
+<!--https://sandbox.apihub.citi.com/gcb/api/authCode/oauth2/authorize?response_type=code&client_id=3906dd6d-534b-4d20-81d7-0e78848013a3&scope=pay_with_points%20accounts_details_transactions%20customers_profiles%20payees%20personal_domestic_transfers%20internal_domestic_transfers%20external_domestic_transfers%20bill_payments%20cards%20onboarding%20reference_data%20meta_data%20insurance_purchase&countryCode=HK&businessCode=GCB&locale=en_US&state=d7162586-bc50-4852-35dd-b85a6224c98f&redirect_uri=https://sandbox.developerhub.citi.com/api-authorize-->
