--- a/index.html
+++ b/index.html
@@ -22,14 +22,43 @@
     <link rel="stylesheet" href="css/tooplate-style.css">
 <!--表格-->
     <link rel="stylesheet" href="dist/excel-bootstrap-table-filter-style.css" />
-
     <script src="js/vendor/echarts.js"></script>
+    <script src="js/search.js"></script>
     <script>
         var code1,code2,code3;
     </script>
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
+<style type="text/css">
+    #box{
+        width: 380px;
+        margin: 30px auto;
+        font-family: 'Microsoft YaHei';
+        font-size: 14px;
+    }
+    input{
+        width: 260px;
+        border: 1px solid #e2e2e2;
+        height: 30px;
+        float: left;
+        background-image: url(img/search.png);
+        background-repeat: no-repeat;
+        background-size: 25px;
+        background-position:5px center;
+        padding:0 0 0 40px;
+    }
+    #search{
+        width: 78px;
+        height: 32px;
+        float: right;
+        background: black;
+        color: white;
+        text-align: center;
+        line-height: 32px;
+        cursor: pointer;
+    }
 
+</style>
 <style type="text/css">
     button
     {
@@ -251,11 +280,7 @@
                                 </ul>
                             </div>
                         </div>
-                            <div>
-                                <h1>详细信息</h1>
-                            </div>
                         </li>
-
                     </div>
                     <div class="page" id="p2">
                         <li class="icon fa fa-user"><span class="title">About Us</span>
@@ -319,6 +344,10 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-md-12">
+                                        <div id="box">
+                                            <input type="text" name="search" id="searchBox" placeholder="请输入关键字">
+                                            <div><button onclick="search()">搜索</button>></div>
+                                        </div>
                                         <h2>Table 1</h2>
                                         <table id="table" class="table table-bordered table-intel">
                                             <thead>
@@ -397,53 +426,53 @@
                             </div>
                         </li>
                     </div>
-                    <div class="page" id="p4">
-                        <li class="icon fa fa-phone"><span class="title">Contact Us</span>
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <form id="contact" action="" method="post">
-                                            <div class="col-md-12">
-                                                <fieldset>
-                                                    <input name="name" type="text" class="form-control" id="name" placeholder="Your Name" required="">
-                                                </fieldset>
-                                            </div>
-                                            <div class="col-md-12">
-                                                <fieldset>
-                                                    <input name="email" type="email" class="form-control" id="email" placeholder="Email" required="">
-                                                </fieldset>
-                                            </div>
-                                            <div class="col-md-12">
-                                                <fieldset>
-                                                    <textarea name="message" rows="6" class="form-control" id="message" placeholder="Message" required=""></textarea>
-                                                </fieldset>
-                                            </div>
-                                            <div class="col-md-12">
-                                                <fieldset>
-                                                    <button type="submit" id="form-submit" class="btn">Send Message</button>
-                                                </fieldset>
-                                            </div>
-                                        </form>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="right-info">
-                                            <p>Lorem ipsum dolor , consectetur adipiscing elit. Nunc purus ligula, ullamcorper idermate velit id, vestibulum auc sapien. Sed quis mauris eget semps imperdiet rhoncus.<br><br>
-                                                <em>120-360 Etiam mauris erat,<br>
-                                                    Vestibulum eu augue nec, 10110<br>
-                                                    Nam consequat<br></em></p>
-                                            <ol class="social-icons">
-                                                <i><a href="#"><i class="fa fa-facebook"></i></a></i>
-                                                <i><a href="#"><i class="fa fa-twitter"></i></a></i>
-                                                <i><a href="#"><i class="fa fa-linkedin"></i></a></i>
-                                                <i><a href="#"><i class="fa fa-rss"></i></a></i>
-                                                <i><a href="#"><i class="fa fa-behance"></i></a></i>
-                                            </ol>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </div>
+<!--                    <div class="page" id="p4">-->
+<!--                        <li class="icon fa fa-phone"><span class="title">Contact Us</span>-->
+<!--                            <div class="container">-->
+<!--                                <div class="row">-->
+<!--                                    <div class="col-md-6">-->
+<!--                                        <form id="contact" action="" method="post">-->
+<!--                                            <div class="col-md-12">-->
+<!--                                                <fieldset>-->
+<!--                                                    <input name="name" type="text" class="form-control" id="name" placeholder="Your Name" required="">-->
+<!--                                                </fieldset>-->
+<!--                                            </div>-->
+<!--                                            <div class="col-md-12">-->
+<!--                                                <fieldset>-->
+<!--                                                    <input name="email" type="email" class="form-control" id="email" placeholder="Email" required="">-->
+<!--                                                </fieldset>-->
+<!--                                            </div>-->
+<!--                                            <div class="col-md-12">-->
+<!--                                                <fieldset>-->
+<!--                                                    <textarea name="message" rows="6" class="form-control" id="message" placeholder="Message" required=""></textarea>-->
+<!--                                                </fieldset>-->
+<!--                                            </div>-->
+<!--                                            <div class="col-md-12">-->
+<!--                                                <fieldset>-->
+<!--                                                    <button type="submit" id="form-submit" class="btn">Send Message</button>-->
+<!--                                                </fieldset>-->
+<!--                                            </div>-->
+<!--                                        </form>-->
+<!--                                    </div>-->
+<!--                                    <div class="col-md-6">-->
+<!--                                        <div class="right-info">-->
+<!--                                            <p>Lorem ipsum dolor , consectetur adipiscing elit. Nunc purus ligula, ullamcorper idermate velit id, vestibulum auc sapien. Sed quis mauris eget semps imperdiet rhoncus.<br><br>-->
+<!--                                                <em>120-360 Etiam mauris erat,<br>-->
+<!--                                                    Vestibulum eu augue nec, 10110<br>-->
+<!--                                                    Nam consequat<br></em></p>-->
+<!--                                            <ol class="social-icons">-->
+<!--                                                <i><a href="#"><i class="fa fa-facebook"></i></a></i>-->
+<!--                                                <i><a href="#"><i class="fa fa-twitter"></i></a></i>-->
+<!--                                                <i><a href="#"><i class="fa fa-linkedin"></i></a></i>-->
+<!--                                                <i><a href="#"><i class="fa fa-rss"></i></a></i>-->
+<!--                                                <i><a href="#"><i class="fa fa-behance"></i></a></i>-->
+<!--                                            </ol>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </li>-->
+<!--                    </div>-->
                     <!--                  <p class="credit">Copyright &copy; 2017 Company Name -->
                     <!--                        -->
                     <!--                        - Designed by <a href="http://www.tooplate.com" target="_parent">Tooplate</a></p>-->
@@ -452,6 +481,7 @@
         </div>
     </div>
 </div>
+
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
@@ -758,6 +788,7 @@
         xmlhttp.send();
     }
 </script>
+
 <script>
     function loadXMLDetail1()
     {
