--- a/index.html
+++ b/index.html
@@ -258,22 +258,28 @@
 
                     </div>
                     <div class="page" id="p2">
-                        <li class="icon fa fa-user"><span class="title">About Us</span>
+                        <li class="icon fa fa-user" style="margin-top: 2%"><span class="title">用户信息</span>
                             <div class="container">
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="left-text">
-                                            <h4>We are Kinetic</h4>
-                                            <p>This kinetic HTML template is provided by Tooplate for free of charge. You may use this layout for your website. Please tell your friends about Tooplate. Thank you.<br><br>Cras suscipit, sem vel cursus iaculis, nibh augue placerat enim, in varius dolor turpis at augue. Nulla facilisi. In quis sem pellentesque, tristique ligula non, tincidunt ipsum. Curabitur porttitor, justo id egestas egestas, enim augue lacinia quam, et volutpat velit augue sodales velit.</p>
+                                            <h5>个人信息</h5>
+                                            <p>账号余额<em id="accountcredit"></em> </p>
+                                            <p>自选基金</p>
+                                            <p id=""></p>
+
+
+
                                             <div class="primary-button">
-                                                <a href="#t3">Discover More</a>
+                                                <a href="#t3">查看更多</a>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
-                                        <div class="right-image">
-                                            <img src="img/right-about-image.png" alt="">
-                                        </div>
+                                    <div class="col-md-6" style="background: #1d2124">
+
+<!--                                        <div class="right-image">-->
+<!--                                            <img src="img/right-about-image.png" alt="">-->
+<!--                                        </div>-->
                                     </div>
                                 </div>
                             </div>
