自选基金样式

--- a/index.html
+++ b/index.html
@@ -289,18 +289,30 @@
                                     <div class="col-md-6">
                                         <div class="left-text">
                                             <h5>个人信息</h5>
-                                            <p>账号余额<em id="accountcredit"></em> </p>
-                                            <p>自选基金</p>
-                                            <p id=""></p>
+                                            <p>账号余额<br>
+                                                <em id="accountcredit">10000</em> </p>
+                                            <p>自选基金  </p>
+                                                <div class="fund" style="position:relative">
+                                                <a id="chosenfund1">00001</a>
+                                                <i class="icon fa fa-star " style="margin-top: 1%;font-size: 20px" onclick="canclestar()"></i>
+                                               </div>
+                                                    <br>
+                                              <div class="fund" style="position:relative">
+                                                <a id="chosenfund2">00002</a>
+                                                <i class="icon fa fa-star "  style="margin-top: 1%;font-size: 20px" onclick="canclestar()"></i>
+                                             </div>
 
-
+<!--                                                <div>-->
+<!--                                                    -->
+<!--                                                </div>-->
 
                                             <div class="primary-button">
                                                 <a href="#t3">查看更多</a>
                                             </div>
                                         </div>
+
                                     </div>
-                                    <div class="col-md-6" style="background: #1d2124">
+                                    <div class="col-md-6" >
 
 <!--                                        <div class="right-image">-->
 <!--                                            <img src="img/right-about-image.png" alt="">-->
