用户信息和跳转修改

--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-light"  background="img/about-bg.png">
 <div class="col-md-12"  style="text-align: center;margin-top: 10%">
-<h2>模态框（Modal）插件事件</h2>
+<h2>进入您的系统界面</h2>
 <!-- 按钮触发模态框 -->
 <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"  style="margin-top: 30px">
     用户登录
