--- a/index.html
+++ b/index.html
@@ -286,33 +286,41 @@
                         <li class="icon fa fa-user" style="margin-top: 2%"><span class="title">用户信息</span>
                             <div class="container">
                                 <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="left-text">
+                                    <div class="col-md-6" style="text-align: center">
+                                        <div >
                                             <h5>个人信息</h5>
-                                            <p>账号余额<br>
-                                                <em id="accountcredit">10000</em> </p>
-                                            <p>自选基金  </p>
-                                                <div class="fund" style="position:relative">
-                                                <a id="chosenfund1">00001</a>
-                                                <i class="icon fa fa-star " style="margin-top: 1%;font-size: 20px" onclick="canclestar()"></i>
-                                               </div>
-                                                    <br>
-                                              <div class="fund" style="position:relative">
-                                                <a id="chosenfund2">00002</a>
-                                                <i class="icon fa fa-star "  style="margin-top: 1%;font-size: 20px" onclick="canclestar()"></i>
-                                             </div>
+                                            <p>账号资产(元)<br>
+                                                <em id="accountcredit">10000000</em> </p>
+                                            <p>昨日收益(元)<br>
+                                            <em id="profityesterday">2550</em>
+                                            </p>
+                                            <p>可用金额(元)<br>
+                                            <em id="availablecredit">100000</em>
+                                            </p>
+
+
 
 <!--                                                <div>-->
 <!--                                                    -->
 <!--                                                </div>-->
 
-                                            <div class="primary-button">
-                                                <a href="#t3">查看更多</a>
-                                            </div>
+
                                         </div>
 
                                     </div>
-                                    <div class="col-md-6" >
+                                    <div class="col-md-6" style="text-align: center">
+                                        <div >
+                                            <h5>自选基金  </h5>
+                                            <div class="fund" >
+                                                <a id="chosenfund1">00001</a>
+                                                <i class="icon fa fa-star " style="margin-top: 1%;margin-left:25%;font-size: 20px" onclick="canclestar()"></i>
+                                            </div>
+                                            <br>
+                                            <div class="fund" >
+                                                <a id="chosenfund2">00002</a>
+                                                <i class="icon fa fa-star "  style="margin-top: 1%;margin-left:25%;font-size: 20px" onclick="canclestar()"></i>
+                                            </div>
+
 
 <!--                                        <div class="right-image">-->
 <!--                                            <img src="img/right-about-image.png" alt="">-->
